--- a/pages/provider.html
+++ b/pages/provider.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vianol Dashboard</title>
+  <title>Vianol Dashboard - Provider page</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/style.css">
 </head>
@@ -14,8 +14,8 @@
   <header class="top-nav shadow-sm">
     <div class="left">
       <div class="logo p-2">
-        <img src="./image/logo_default-icon.jpg" alt="image" class="logo-image">
-        <a href="index.html" class="navbar-brand">Vianol</a>
+        <img src="../image/logo_default-icon.jpg" alt="image" class="logo-image">
+        <a href="../index.html" class="navbar-brand">Vianol</a>
       </div>
     </div>
     <div class="right">
@@ -32,7 +32,7 @@
               <span href="#" class="text-dark">
                 Admin
               </span>
-              <img src="./image/logo_default-icon.jpg" alt="image" class="admin-image">
+              <img src="../image/logo_default-icon.jpg" alt="image" class="admin-image">
             </button>
             <div id="profileMenu" class="bg-white shadow-sm">
               <div class="pMenuItem">
@@ -52,8 +52,8 @@
   <main class="main-container">
     <aside id="sideMenu" class="shadow">
       <div class="logo p-2">
-        <img src="./image/logo_default-icon.jpg" alt="image" class="logo-image">
-        <a href="index.html" class="navbar-brand">Vianol</a>
+        <img src="../image/logo_default-icon.jpg" alt="image" class="logo-image">
+        <a href="../index.html" class="navbar-brand">Vianol</a>
       </div>
       <div class="side-links">
         <ul class="slink-menu mt-3">
@@ -85,7 +85,14 @@
         </ul>
       </div>
     </aside>
-    <div class="content-container"></div>
+    <div class="content-container container-fluid">
+        <div class="bg-primary container-header">
+            <h4>Suppliers | Supplier Management</h4>
+            <div>
+                hi
+            </div>
+        </div>
+    </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/app.js"></script>
