task list from provider is complete

--- a/index.html
+++ b/index.html
@@ -49,44 +49,49 @@
       </div>
     </div>
   </header>
-  <main class="main-container">
-    <aside id="sideMenu" class="shadow">
-      <div class="logo p-2">
-        <img src="./image/logo_default-icon.jpg" alt="image" class="logo-image">
-        <a href="index.html" class="navbar-brand">Vianol</a>
-      </div>
-      <div class="side-links">
-        <ul class="slink-menu mt-3">
-          <li class="slink-menu-item bg-light p-2"><a href="#">Dashboard</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-        </ul>
-        <ul class="slink-menu">
-          <li class="mb-1"><span class="smenu-title p-2">App Management</span></li>
-          <li class="slink-menu-item bg-light p-2">
-            <a href="#" id="providerDropDown" class="nav-link"><i class="bi bi-people-fill me-2 text-dark"></i> Providers <i class="bi bi-chevron-down text-dark ms-1"></i></a>
-            <ul id="providerContainer" class="provider-container">
-              <li class="p-2">
-                <a href="./pages/provider.html" class="nav-link">Providers</a>
-              </li>
-              <li class="p-2">
-                <a href="#" class="nav-link">Gallaries</a>
-              </li>
-            </ul>
-          </li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-        </ul>
-        <ul class="slink-menu">
-          <li class="mb-1"><span class="smenu-title p-2">Settings</span></li>
-          <li class="slink-menu-item p-2"><a href="#">Media Library</a></li>
-        </ul>
-      </div>
-    </aside>
-    <div class="content-container"></div>
+  <aside id="sideMenu" class="shadow">
+    <div class="logo p-2">
+      <img src="./image/logo_default-icon.jpg" alt="image" class="logo-image">
+      <a href="index.html" class="navbar-brand">Vianol</a>
+    </div>
+    <div class="side-links">
+      <ul class="slink-menu mt-3">
+        <li class="slink-menu-item bg-light p-2"><a href="#">Dashboard</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+      </ul>
+      <ul class="slink-menu">
+        <li class="mb-1"><span class="smenu-title p-2">App Management</span></li>
+        <li class="slink-menu-item bg-light p-2">
+          <a href="#" id="providerDropDown" class="nav-link"><i class="bi bi-people-fill me-2 text-dark"></i> Providers
+            <i class="bi bi-chevron-down text-dark ms-1"></i></a>
+          <ul id="providerContainer" class="provider-container">
+            <li class="p-2">
+              <a href="./pages/provider.html" class="nav-link">Providers</a>
+            </li>
+            <li class="p-2">
+              <a href="#" class="nav-link">Gallaries</a>
+            </li>
+          </ul>
+        </li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+      </ul>
+      <ul class="slink-menu">
+        <li class="mb-1"><span class="smenu-title p-2">Settings</span></li>
+        <li class="slink-menu-item p-2"><a href="#">Media Library</a></li>
+      </ul>
+    </div>
+  </aside>
+  <main class="main-content">
+
   </main>
+  <footer class="footer">
+    <p class="copyright">Copyright © 2023 Vianol . All rights reserved.</p>
+    <p class="version">Version 2.5.0</p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/app.js"></script>
 </body>
