--- a/pages/provider.html
+++ b/pages/provider.html
@@ -49,51 +49,190 @@
       </div>
     </div>
   </header>
-  <main class="main-container">
-    <aside id="sideMenu" class="shadow">
-      <div class="logo p-2">
-        <img src="../image/logo_default-icon.jpg" alt="image" class="logo-image">
-        <a href="../index.html" class="navbar-brand">Vianol</a>
+  <aside id="sideMenu" class="shadow">
+    <div class="logo p-2">
+      <img src="../image/logo_default-icon.jpg" alt="image" class="logo-image">
+      <a href="../index.html" class="navbar-brand">Vianol</a>
+    </div>
+    <div class="side-links">
+      <ul class="slink-menu mt-3">
+        <li class="slink-menu-item bg-light p-2"><a href="#">Dashboard</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+      </ul>
+      <ul class="slink-menu">
+        <li class="mb-1"><span class="smenu-title p-2">App Management</span></li>
+        <li class="slink-menu-item bg-light p-2">
+          <a href="#" id="providerDropDown" class="nav-link"><i class="bi bi-people-fill me-2 text-dark"></i>
+            Providers <i class="bi bi-chevron-down text-dark ms-1"></i></a>
+          <ul id="providerContainer" class="provider-container">
+            <li class="p-2">
+              <a href="./pages/provider.html" class="nav-link">Providers</a>
+            </li>
+            <li class="p-2">
+              <a href="#" class="nav-link">Gallaries</a>
+            </li>
+          </ul>
+        </li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+        <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
+      </ul>
+      <ul class="slink-menu">
+        <li class="mb-1"><span class="smenu-title p-2">Settings</span></li>
+        <li class="slink-menu-item p-2"><a href="#">Media Library</a></li>
+      </ul>
+    </div>
+  </aside>
+  <main class="main-content bg-white">
+    <div class="content-header">
+      <div>
+        <p class="header-title">Suppliers | Supplier Management</p>
       </div>
-      <div class="side-links">
-        <ul class="slink-menu mt-3">
-          <li class="slink-menu-item bg-light p-2"><a href="#">Dashboard</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-        </ul>
-        <ul class="slink-menu">
-          <li class="mb-1"><span class="smenu-title p-2">App Management</span></li>
-          <li class="slink-menu-item bg-light p-2">
-            <a href="#" id="providerDropDown" class="nav-link"><i class="bi bi-people-fill me-2 text-dark"></i> Providers <i class="bi bi-chevron-down text-dark ms-1"></i></a>
-            <ul id="providerContainer" class="provider-container">
-              <li class="p-2">
-                <a href="./pages/provider.html" class="nav-link">Providers</a>
-              </li>
-              <li class="p-2">
-                <a href="#" class="nav-link">Gallaries</a>
-              </li>
-            </ul>
+      <div>
+        <ul class="cumber-menu">
+          <li class="cumber-item">
+            <a href="#" class="text-info nav-link">Dashboard</a>
           </li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-          <li class="slink-menu-item p-2"><a href="#">Favorites</a></li>
-        </ul>
-        <ul class="slink-menu">
-          <li class="mb-1"><span class="smenu-title p-2">Settings</span></li>
-          <li class="slink-menu-item p-2"><a href="#">Media Library</a></li>
+          <li class="cumber-item">
+            <a href="#" class="text-info nav-link">Providers</a>
+          </li>
+          <li class="cumber-item">
+            <a href="#" class="text-info nav-link">Task list</a>
+          </li>
         </ul>
       </div>
-    </aside>
-    <div class="content-container container-fluid">
-        <div class="bg-primary container-header">
-            <h4>Suppliers | Supplier Management</h4>
-            <div>
-                hi
+    </div>
+    <div class="content-body">
+      <div class="nav-buttons bg-light px-3">
+          <div class="tab-buttons">
+            <a href="provider.html" class="btn btn-info text-white">Task List</a>
+            <a href="supplier.html" class="btn btn-secondary">Create new supplier</a>
+          </div>
+          <ul class="useful-buttons">
+            <li class="useful-button-items">
+              <a href="#" class="text-info nav-link">Export</a>
+            </li>
+            <li class="useful-button-items">
+              <a href="#" class="text-info nav-link">Update</a>
+            </li>
+            <li class="useful-button-items">
+              <a href="#" class="text-info nav-link">Press</a>
+            </li>
+            <li class="useful-button-items">
+              <a href="#" class="text-info nav-link">Reset</a>
+            </li>
+            <li class="useful-button-items">
+              <a href="#" class="text-info nav-link">Columns</a>
+            </li>
+          </ul>
+      </div>
+      <div class="bg-white shadow-sm px-3">
+        <div class="filter-items">
+          <div class="filter-input">
+            <select class="form-select filter" aria-label="Default select example">
+              <option selected>10</option>
+              <option value="25">25</option>
+              <option value="50">50</option>
+              <option value="10">100</option>
+            </select>
+            <span>results per page</span>
+          </div>
+          <div class="search-input">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search here">
+              <button class="btn btn-info text-white"><i class="bi bi-search"></i></button>
             </div>
+          </div>
         </div>
+        <div class="task-list table-responsive">
+          <table class="table table-sm align-middle">
+            <thead>
+              <tr>
+                <th scope="col">Image</th>
+                <th scope="col">First name</th>
+                <th scope="col">City</th>
+                <th scope="col">Address</th>
+                <th scope="col">Landline phone</th>
+                <th scope="col">Mobile phone</th>
+                <th scope="col">Actions</th>
+              </tr>
+            </thead>
+            <tbody class="table-group-divider">
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>Otto</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="next-page">
+          <p class="page-text">
+            Showing 1 to 7 out of 7 rows
+          </p>
+          <div>
+            <nav aria-label="...">
+              <ul class="pagination">
+                <li class="page-item disabled">
+                  <span class="page-link">Previous</span>
+                </li>
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#">Next</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
+  <footer class="footer">
+    <p class="copyright">Copyright © 2023 Vianol . All rights reserved.</p>
+    <p class="version">Version 2.5.0</p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/app.js"></script>
 </body>
