--- a/pages/provider.html
+++ b/pages/provider.html
@@ -93,13 +93,13 @@
       <div>
         <ul class="cumber-menu">
           <li class="cumber-item">
-            <a href="#" class="text-info nav-link">Dashboard</a>
+            <a href="../index.html" class="text-info nav-link">Dashboard</a>
           </li>
           <li class="cumber-item">
-            <a href="#" class="text-info nav-link">Providers</a>
+            <a href="./provider.html" class="text-info nav-link">Providers</a>
           </li>
           <li class="cumber-item">
-            <a href="#" class="text-info nav-link">Task list</a>
+            <a href="./provider.html" class="text-info nav-link">Task list</a>
           </li>
         </ul>
       </div>
