--- a/pages/supplier.html
+++ b/pages/supplier.html
@@ -141,12 +141,41 @@
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         <label class="form-check-label fw-bold" for="flexCheckDefault">
-                          supplier
+                          supplier closed
                         </label>
                       </div>
                       <div class="card border-none">
                         <div class="card-header editor-header">
-                          
+                          <div class="first-row">
+                            <select class="form-select font-number">
+                                <option selected>Font Size</option>
+                                <option value="1">15</option>
+                                <option value="2">20</option>
+                                <option value="3">25</option>
+                              </select>
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn btn-secondary"><i class="bi bi-type-bold"></i></button>
+                                <button type="button" class="btn btn-secondary"><i class="bi bi-type-underline"></i></button>
+                                <button type="button" class="btn btn-secondary"><i class="bi bi-eraser-fill"></i></button>
+                            </div>
+                            <select class="form-select font-style">
+                                <option selected>Font Style</option>
+                                <option value="1">Arial</option>
+                                <option value="2">Time Romans</option>
+                                <option value="3">Callabri</option>
+                            </select>
+                          </div>
+                          <div class="second-row">
+                            <button class="btn btn-secondary"><i class="bi bi-eyedropper"></i></button>
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn btn-secondary"><i class="bi bi-type-bold"></i></button>
+                                <button type="button" class="btn btn-secondary"><i class="bi bi-type-underline"></i></button>
+                                <button type="button" class="btn btn-secondary"><i class="bi bi-eraser-fill"></i></button>
+                            </div>
+                            <button class="btn btn-secondary">
+                                <i class="bi bi-fonts"></i>
+                            </button>
+                          </div>
                         </div>
                         <div class="editor-body">
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
