--- a/pages/supplier.html
+++ b/pages/supplier.html
@@ -148,7 +148,7 @@
                         <div class="card-header editor-header">
                           <div class="first-row">
                             <select class="form-select font-number">
-                                <option selected>Font Size</option>
+                                <option selected>8</option>
                                 <option value="1">15</option>
                                 <option value="2">20</option>
                                 <option value="3">25</option>
@@ -159,10 +159,8 @@
                                 <button type="button" class="btn btn-secondary"><i class="bi bi-eraser-fill"></i></button>
                             </div>
                             <select class="form-select font-style">
-                                <option selected>Font Style</option>
-                                <option value="1">Arial</option>
-                                <option value="2">Time Romans</option>
-                                <option value="3">Callabri</option>
+                                <option selected>Arial</option>
+                                <option value="1">Times New Roman</option>
                             </select>
                           </div>
                           <div class="second-row">
