new btn in editor

--- a/pages/supplier.html
+++ b/pages/supplier.html
@@ -154,9 +154,9 @@
                                 <option value="3">25</option>
                               </select>
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-secondary"><i class="bi bi-type-bold"></i></button>
-                                <button type="button" class="btn btn-secondary"><i class="bi bi-type-underline"></i></button>
-                                <button type="button" class="btn btn-secondary"><i class="bi bi-eraser-fill"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-type-bold"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-type-underline"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-eraser-fill"></i></button>
                             </div>
                             <select class="form-select font-style">
                                 <option selected>Arial</option>
@@ -164,11 +164,11 @@
                             </select>
                           </div>
                           <div class="second-row">
-                            <button class="btn btn-secondary"><i class="bi bi-eyedropper"></i></button>
+                            <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-secondary"><i class="bi bi-type-bold"></i></button>
-                                <button type="button" class="btn btn-secondary"><i class="bi bi-type-underline"></i></button>
-                                <button type="button" class="btn btn-secondary"><i class="bi bi-eraser-fill"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-list-ul"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-list-ol"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-justify-left"></i></button>
                             </div>
                             <button class="btn btn-secondary">
                                 <i class="bi bi-fonts"></i>
