--- a/pages/supplier.html
+++ b/pages/supplier.html
@@ -144,7 +144,10 @@
                           supplier closed
                         </label>
                       </div>
-                      <div class="card border-none">
+                      <label class="form-check-label fw-bold" for="flexCheckDefault">
+                        Description
+                      </label>
+                      <div class="card">
                         <div class="card-header editor-header">
                           <div class="first-row">
                             <select class="form-select font-number">
@@ -162,17 +165,25 @@
                                 <option selected>Arial</option>
                                 <option value="1">Times New Roman</option>
                             </select>
-                          </div>
-                          <div class="second-row">
                             <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn bg-white"><i class="bi bi-list-ul"></i></button>
                                 <button type="button" class="btn bg-white"><i class="bi bi-list-ol"></i></button>
                                 <button type="button" class="btn bg-white"><i class="bi bi-justify-left"></i></button>
                             </div>
-                            <button class="btn btn-secondary">
-                                <i class="bi bi-fonts"></i>
+                            <button class="btn bg-white">
+                                <i class="bi bi-grid-3x3"></i>
                             </button>
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn bg-white"><i class="bi bi-link"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-card-image"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-camera-video"></i></button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn bg-white"><i class="bi bi-arrows-fullscreen"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-code-slash"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-question-lg"></i></button>
+                            </div>
                           </div>
                         </div>
                         <div class="editor-body">
@@ -183,6 +194,58 @@
                 <div class="right-form">
                     <input type="file">
                     <input type="file">
+                    <div class="form-check">
+                        <label class="form-check-label fw-bold" for="flexCheckDefault">
+                            Privacy Consent
+                        </label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    </div>    
+                    <label class="form-check-label fw-bold" for="flexCheckDefault">
+                        Timetables
+                      </label>
+                      <div class="card">
+                        <div class="card-header editor-header">
+                          <div class="first-row">
+                            <select class="form-select font-number">
+                                <option selected>8</option>
+                                <option value="1">15</option>
+                                <option value="2">20</option>
+                                <option value="3">25</option>
+                              </select>
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn bg-white"><i class="bi bi-type-bold"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-type-underline"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-eraser-fill"></i></button>
+                            </div>
+                            <select class="form-select font-style">
+                                <option selected>Arial</option>
+                                <option value="1">Times New Roman</option>
+                            </select>
+                            <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn bg-white"><i class="bi bi-list-ul"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-list-ol"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-justify-left"></i></button>
+                            </div>
+                            <button class="btn bg-white">
+                                <i class="bi bi-grid-3x3"></i>
+                            </button>
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn bg-white"><i class="bi bi-link"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-card-image"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-camera-video"></i></button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn bg-white"><i class="bi bi-arrows-fullscreen"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-code-slash"></i></button>
+                                <button type="button" class="btn bg-white"><i class="bi bi-question-lg"></i></button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="editor-body">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                      </div>
                 </div>
             </form>
         </div>
