--- a/pages/supplier.html
+++ b/pages/supplier.html
@@ -187,13 +187,19 @@
                           </div>
                         </div>
                         <div class="editor-body">
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <textarea class="form-control editor" id="exampleFormControlTextarea1"></textarea>
                         </div>
                       </div>
                 </div>
                 <div class="right-form">
-                    <input type="file">
-                    <input type="file">
+                    <div>
+                        <label for="formFile" class="form-label fw-bold">Image</label>
+                        <input class="form-control" type="file" id="formFile">
+                      </div>
+                      <div>
+                        <label for="formFile" class="form-label fw-bold">General conditions of Sale</label>
+                        <input class="form-control" type="file" id="formFile">
+                      </div>
                     <div class="form-check">
                         <label class="form-check-label fw-bold" for="flexCheckDefault">
                             Privacy Consent
@@ -243,7 +249,7 @@
                           </div>
                         </div>
                         <div class="editor-body">
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <textarea class="form-control editor" id="exampleFormControlTextarea1"></textarea>
                         </div>
                       </div>
                 </div>
