--- a/pages/supplier.html
+++ b/pages/supplier.html
@@ -194,11 +194,17 @@
                 <div class="right-form">
                     <div>
                         <label for="formFile" class="form-label fw-bold">Image</label>
-                        <input class="form-control" type="file" id="formFile">
+                        <div id="imageUploader">
+                            <i class="bi bi-images text-secondary"></i>
+                            <span class="text-secondary fw-bold">Drop files here to upload</span>
+                        </div>
                       </div>
                       <div>
                         <label for="formFile" class="form-label fw-bold">General conditions of Sale</label>
-                        <input class="form-control" type="file" id="formFile">
+                        <div id="imageUploader">
+                            <i class="bi bi-folder text-secondary"></i>
+                            <span class="text-secondary fw-bold">Drop files here to upload</span>
+                        </div>
                       </div>
                     <div class="form-check">
                         <label class="form-check-label fw-bold" for="flexCheckDefault">
